--- a/DQD/MainPage.xaml
+++ b/DQD/MainPage.xaml
@@ -229,6 +229,11 @@
                        Foreground="{ThemeResource DQDReTextColor}"/>
             </StackPanel>
             <Frame Name="ContentFrame" />
+            <ProgressRing Name="LoadingAnimation"
+                      IsActive="False"
+                      Width="50"
+                      Height="50"
+                      Foreground="{ThemeResource DQDBackground}"/>
         </Grid>
 
         <Border Name="PopupBorder" 
@@ -330,7 +335,7 @@
                         Width=" 50"
                         Click="ThemeModeBtn_Click"/>
                 </Grid>
-                <StackPanel Name="SettMenu"
+                <ScrollViewer Name="SettMenu"
                             Background="{ThemeResource AppPersonalExtraBackground02}"
                             RelativePanel.AlignBottomWithPanel="True"
                             RelativePanel.AlignTopWithPanel="True"
@@ -339,24 +344,26 @@
                             Margin="0.25,53,0,0"
                             Padding="15,12,5,5"
                             Visibility="Collapsed">
-                    <TextBlock Text="设置" FontSize="20"/>
-                    <Grid Margin="0,10,0,0">
-                        <StackPanel Orientation="Vertical">
-                            <TextBlock Text="沉浸式状态栏"
+                    <StackPanel>
+                        <TextBlock Text="设置" FontSize="20"/>
+                        <Grid Margin="0,10,0,0">
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock Text="沉浸式状态栏"
                                    Style="{StaticResource TitleTextStyle}"/>
-                            <TextBlock Text="改变标题栏或状态栏风格"
+                                <TextBlock Text="改变标题栏或状态栏风格"
                                    Style="{StaticResource SummaryTextStyle}"/>
-                        </StackPanel>
-                        <ToggleSwitch Name="ColorSwitch" 
+                            </StackPanel>
+                            <ToggleSwitch Name="ColorSwitch" 
                                       Style="{ThemeResource ThemeModeSwitch}" 
                                       HorizontalAlignment="Right"
                                       Margin="0,0,-100,0"
                                       OnContent=" " 
                                       OffContent=" " 
                                       Toggled="Switch_Toggled" />
-                    </Grid>
-                </StackPanel>
-                <StackPanel Name="AboutMenu"
+                        </Grid>
+                    </StackPanel>
+                </ScrollViewer>
+                <ScrollViewer Name="AboutMenu"
                             Background="{ThemeResource AppPersonalExtraBackground02}"
                             RelativePanel.AlignBottomWithPanel="True"
                             RelativePanel.AlignTopWithPanel="True"
@@ -365,41 +372,40 @@
                             Margin="0.25,53,0,0"
                             Padding="0,12,0,5"
                             Visibility="Visible">
-                    <ScrollViewer Height="{Binding Height, ElementName=AboutMenu, Mode=OneWay}">
-                        <StackPanel Margin="15,0,10,0">
-                            <Rectangle Height="1"
+                    <StackPanel Margin="15,0,10,0">
+                        <Rectangle Height="1"
                                Fill="{ThemeResource DQDBackground}"
                                Margin=" -2,-2,-2,0"/>
-                            <TextBlock Text="关于" FontSize="20"/>
-                            <TextBlock FontWeight="Thin"
+                        <TextBlock Text="关于" FontSize="20"/>
+                        <TextBlock FontWeight="Thin"
                                FontSize="12"
                                Margin="0,5,5,5"
                                TextWrapping="WrapWholeWords"
                                Text="这是一款第三方应用，App中所有内容均来源于www.dongqiudi.com，
 虽然内容来自网页，但绝非大家深恶痛绝的网页嵌套，大部分内容均已本地化，
 在网络畅通的情况下，可以快速的加载内容。"/>
-                            <TextBlock FontWeight="Thin"
+                        <TextBlock FontWeight="Thin"
                                FontSize="12"
                                Margin="0,5,5,5"
                                TextWrapping="WrapWholeWords"
                                Text="懂球帝的内容较多，大量的内容目前已经在开发中，以后会慢慢补齐。"/>
-                            <TextBlock FontWeight="Thin"
+                        <TextBlock FontWeight="Thin"
                                FontSize="12"
                                Margin="0,5,5,5"
                                TextWrapping="WrapWholeWords"
                                Text="由于是第三方应用，没有官方API支持，暂时不支持登录功能，圈子功能等内容，
 开发者正在努力的寻求解决方法，有办法的朋友也可以援助我/(ㄒoㄒ)/~~。"/>
-                            <TextBlock FontWeight="Thin"
+                        <TextBlock FontWeight="Thin"
                                FontSize="12"
                                Margin="0,5,5,5"
                                TextWrapping="WrapWholeWords"
                                Text="DQD-UWP绝对不会加入广告功能(*^_^*)"/>
-                            <TextBlock Name="VersionText"
+                        <TextBlock Name="VersionText"
                                 FontSize="16"
                                 Margin="0,15,5,5"
                                 TextWrapping="WrapWholeWords"
                                 FontWeight="SemiBold">版本号：由代码生成</TextBlock>
-                            <TextBlock FontWeight="Thin"
+                        <TextBlock FontWeight="Thin"
                                FontSize="16"
                                Margin="0,15,5,5"
                                TextWrapping="WrapWholeWords">
@@ -417,33 +423,32 @@
                         <Run Text="QQ：245396954"/><LineBreak/>
                         <Run Text="博客："/><LineBreak/>
                         <Run Text="新浪微博："/>
-                            </TextBlock>
-                            <HyperlinkButton Content="弱智Coder泡麵君" 
+                        </TextBlock>
+                        <HyperlinkButton Content="弱智Coder泡麵君" 
                                      NavigateUri="http://weibo.com/miao17game?refer_flag=1001030102_" 
                                      Foreground="{ThemeResource DQDBackground}"
                                      Padding="0"
                                      Margin="80,-30,0,0"/>
-                            <HyperlinkButton Content="Wallace Sun"
+                        <HyperlinkButton Content="Wallace Sun"
                                      NavigateUri="http://noodlesblog.azurewebsites.net/" 
                                      Foreground="{ThemeResource DQDBackground}"
                                      Padding="0"
                                      Margin="50,-73,0,0"/>
-                            <TextBlock FontWeight="Thin"
+                        <TextBlock FontWeight="Thin"
                                FontSize="16"
                                Margin="0,15,5,5"
                                TextWrapping="WrapWholeWords">
                         <Run Text="通过邮件反馈问题" FontWeight="SemiBold"/>
-                            </TextBlock>
-                            <Button Content="我要反馈"
+                        </TextBlock>
+                        <Button Content="我要反馈"
                             Background="{ThemeResource DQDBackground}"
                             Foreground="#EFEFEF"
                             Name="FeedBackBtn" 
                             Margin="1,0,0,0"
                             Click="FeedBackBtn_Click"/>
-                        </StackPanel>
-                    </ScrollViewer>
-                </StackPanel>
-                <StackPanel Name="AboutDongQDMenu"
+                    </StackPanel>
+                </ScrollViewer>
+                <ScrollViewer Name="AboutDongQDMenu"
                             Background="{ThemeResource AppPersonalExtraBackground02}"
                             RelativePanel.AlignBottomWithPanel="True"
                             RelativePanel.AlignTopWithPanel="True"
@@ -452,34 +457,36 @@
                             Margin="0.25,53,0,0"
                             Padding="15,12,5,5"
                             Visibility="Collapsed">
-                    <TextBlock Text="关于懂球帝" FontSize="20"/>
-                    <TextBlock FontWeight="Thin"
+                    <StackPanel>
+                        <TextBlock Text="关于懂球帝" FontSize="20"/>
+                        <TextBlock FontWeight="Thin"
                                FontSize="12"
                                Margin="0,5,5,5"
                                TextWrapping="WrapWholeWords"
                                Text="懂球帝于2013年12月5日正式发布，目前已经成为全国最大的足球媒体和社区，中国目前用户量最多最大，影响力最大的足球媒体。我们致力于为中国足球的发展贡献自己的力量。"/>
-                    <TextBlock FontWeight="Thin"
+                        <TextBlock FontWeight="Thin"
                                FontSize="12"
                                Margin="0,5,5,5"
                                TextWrapping="WrapWholeWords"
                                Text="投稿请发送到： tougao@dongqiudi.com"/>
-                    <TextBlock FontWeight="Thin"
+                        <TextBlock FontWeight="Thin"
                                FontSize="12"
                                Margin="0,5,5,5"
                                TextWrapping="WrapWholeWords"
                                Text="懂球帝尊重知识产权和各方的诉求，如有版权和相关其他诉求，可邮件联系我们沟通。 hezuo@dongqiudi.com"/>
-                    <TextBlock FontWeight="Thin"
+                        <TextBlock FontWeight="Thin"
                                FontSize="12"
                                Margin="0,5,5,5"
                                TextWrapping="WrapWholeWords"
                                Text="如果您有任何关于懂球帝的问题，可以在微博联系@懂球帝，我们的工作人员会以最快的速度回复您。"/>
-                    <TextBlock FontWeight="Thin"
+                        <TextBlock FontWeight="Thin"
                                FontSize="16"
                                Margin="0,15,5,5"
                                TextWrapping="WrapWholeWords">
                         <Run Text="以上信息来源于懂球帝官网"/><LineBreak/>
-                    </TextBlock>
-                </StackPanel>
+                        </TextBlock>
+                    </StackPanel>
+                </ScrollViewer>
             </RelativePanel>
         </Popup>
 
