--- a/XPShadow/Themes/Generic.xaml
+++ b/XPShadow/Themes/Generic.xaml
@@ -1,6 +1,6 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="using:XP"
+                    xmlns:local="using:DQD.Shadow"
                     xmlns:win2d="using:Microsoft.Graphics.Canvas.UI.Xaml">
 
     <Style TargetType="local:Shadow">
